main.js added in angular json file

--- a/angular.json
+++ b/angular.json
@@ -37,7 +37,8 @@
               "src/assets/js/bootstrap.min.js",
               "src/assets/js/owl.carousel.min.js",
               "src/assets/js/jquery.magnific-popup.min.js",
-              "src/assets/js/aos.js"
+              "src/assets/js/aos.js",
+              "src/assets/js/main.js"
              
             ]
           },
